# robustPolycube

./: .gitignore  CMakeLists.txt  README.md
lib/deformation/: deformation.cpp  deformation.h  tetgen.cxx  tetgen.h  tools.cpp  tools.h
lib/flagging/: naive_flagging.cpp  naive_flagging.h
lib/post_processing/: CADaware_hexsmoothing.cpp  CADaware_hexsmoothing.h  pillowing.cpp  pillowing.h  tools.cpp  tools.h
lib/quantization/: blockExtraction.cpp  blockExtraction.h  chartCleaning.cpp  chartCleaning.h  dataStructure.cpp  dataStructure.h  inversion.cpp  inversion.h  quantization.cpp  quantization.h  tools.cpp  tools.h
lib/utils/: LinearSolver.cpp  LinearSolver.h  elliptic_smoothing.cpp  elliptic_smoothing.h  intersections.cpp  intersections.h  projection.h  standard_hexsmoother.cpp  standard_hexsmoother.h  trace.cpp  trace.h
mesh/: B0.mesh  M1_tet.mesh  NY_2.mesh  S3.mesh  cup.mesh
